left pannel 배경 수정, css 수정

--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -10,3 +10,9 @@
     display: flex;
     flex-direction: row;
 }
+
+@media screen and (max-width: 1000px){
+    .mainItem{
+        flex-direction: column;
+    }
+}
