--- a/components/post.module.css
+++ b/components/post.module.css
@@ -44,3 +44,16 @@
 .reference div{
     padding-left: 10px;
 }
+
+
+@media screen and (max-width: 1000px){
+    .post{
+        width: 90%;
+        margin: auto;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        padding: 10px;
+        font: 0.9em;
+
+    }
+}
