--- a/components/leftPanel.module.css
+++ b/components/leftPanel.module.css
@@ -15,7 +15,18 @@
     min-height: 100vh;
     width: 23%;
     min-width: 300px;
-    background-image: linear-gradient(0deg,  rgb(38, 104, 186) 0%, rgb(100, 149, 237) 50%);
+    color: white;
+    background-image: url('../public/image1.jpeg');
+    /* background-image: linear-gradient(0deg,  rgb(38, 104, 186) 0%, rgb(100, 149, 237) 50%); */
+}
+
+@media screen and (max-width: 1000px){
+    .nav{
+        width : 100%;
+        min-height: 100px;
+        display: flex;
+        flex-direction: row;
+    }
 }
 
 .desc {
@@ -49,6 +60,10 @@
     cursor: pointer;
 }
 
+.menuItem > div:first-child:hover{
+    color: #f8bbd0;
+}
+
 .menuItem:last-child{
     border-bottom: 1px solid #2668ba;
 }
@@ -62,7 +77,13 @@
 
 .menuItem a{
     text-decoration: none;
-    color: black;
+    color: white;
+}
+
+
+.menuItem a:hover{
+    text-decoration: none;
+    color: #f8bbd0;
 }
 
 .circle{
